k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: trendo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: drdro28/trendo-backend:0.3.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8007

          volumeMounts:
            - name: uploads-volume
              mountPath: /data/uploads

      volumes:
        - name: uploads-volume
          persistentVolumeClaim:
            claimName: uploads-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: trendo-demo
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8007
      targetPort: 8007
